grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $._declaration,
      $.expression_statement,
    ),

    // =========================================================================
    // Declarations
    // =========================================================================

    function_declaration: $ => seq(
      optional($._visibility),
      'func',
      field('name', $.identifier),
      optional($.generic_params),
      field('parameters', $.parameter_list),
      optional(field('return_type', $._type)),
      field('body', $.block),
    ),

    _visibility: $ => choice('public', 'package'),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')',
    ),

    parameter: $ => choice(
      // Regular parameter: name: Type [= default]
      seq(
        optional($._capability),
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('default', $._expression))),
      ),
      // Self parameter: [mut|take] self
      seq(
        optional($._capability),
        $.self_parameter,
      ),
    ),

    self_parameter: $ => 'self',

    _capability: $ => choice('read', 'mut', 'take'),

    interface_declaration: $ => choice(
      // Full interface with methods
      seq(
        optional($._visibility),
        'interface',
        field('name', $.type_identifier),
        optional($.generic_params),
        '{',
        repeat($.interface_method),
        '}',
      ),
      // Interface bundle
      seq(
        optional($._visibility),
        'interface',
        field('name', $.type_identifier),
        '=',
        $.interface_list,
      ),
    ),

    interface_method: $ => prec.right(seq(
      'func',
      field('name', $.identifier),
      optional($.generic_params),
      field('parameters', $.parameter_list),
      optional(field('return_type', $._type)),
    )),

    extern_block: $ => seq(
      'extern',
      field('abi', $.string_literal),
      '{',
      repeat($.extern_function),
      '}',
    ),

    extern_function: $ => prec.right(seq(
      'func',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(field('return_type', $._type)),
    )),

    _statement: $ => choice(
      $.let_statement,
      $.var_statement,
      $.expression_statement,
    ),

    let_statement: $ => seq(
      optional('shared'),
      'let',
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
    ),

    var_statement: $ => seq(
      optional('shared'),
      'var',
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
    ),

    expression_statement: $ => $._expression,

    // =========================================================================
    // Expressions
    // =========================================================================

    _expression: $ => choice(
      $.identifier,
      $.type_identifier,
      $._literal,
      $.parenthesized_expression,
      $.tuple_literal,
      $.array_literal,
      $.block,
      $.if_expression,
      $.match_expression,
      $.while_expression,
      $.for_expression,
      $.return_expression,
      $.error_expression,
      $.break_expression,
      $.continue_expression,
      $.binary_expression,
      $.unary_expression,
      $.call_expression,
      $.method_call_expression,
      $.field_expression,
      $.index_expression,
      $.type_cast,
      $.is_expression,
      $.struct_literal,
      $.closure_expression,
      $.fmt_expression,
      $.copy_expression,
      $.defer_expression,
      $.shared_expression,
      $.parallel_expression,
      $.detach_expression,
      $.unsafe_expression,
      $.when_expression,
      $.assignment_expression,
      $.otherwise_expression,
    ),

    array_literal: $ => seq('[', commaSep($._expression), ']'),

    block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    binary_expression: $ => {
      const table = [
        [PREC.OR, choice('or', 'xor')],
        [PREC.AND, 'and'],
        [PREC.BITWISE_OR, '|'],
        [PREC.BITWISE_XOR, '^'],
        [PREC.BITWISE_AND, '&'],
        [PREC.EQUALITY, choice('==', '!=')],
        [PREC.COMPARISON, choice('<', '<=', '>', '>=')],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.ADDITIVE, choice('+', '-')],
        [PREC.MULTIPLICATIVE, choice('*', '/', '%')],
      ];
      return choice(...table.map(([prec, op]) =>
        prec_left(prec, seq(
          field('left', $._expression),
          field('operator', op),
          field('right', $._expression),
        )),
      ));
    },

    unary_expression: $ => prec(PREC.UNARY, seq(
      field('operator', choice('-', 'not', '~')),
      field('operand', $._expression),
    )),

    call_expression: $ => prec(PREC.POSTFIX, seq(
      field('function', $._expression),
      optional($.type_arguments),
      field('arguments', $.argument_list),
    )),

    method_call_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._expression),
      '.',
      field('method', $.identifier),
      optional($.type_arguments),
      field('arguments', $.argument_list),
    )),

    argument_list: $ => seq(
      '(',
      commaSep($.argument),
      ')',
    ),

    argument: $ => seq(
      optional($._capability),
      $._expression,
    ),

    field_expression: $ => prec(PREC.POSTFIX, seq(
      field('object', $._expression),
      '.',
      field('field', choice($.identifier, $.type_identifier)),
    )),

    type_cast: $ => prec(PREC.POSTFIX, seq(
      field('value', $._expression),
      'as',
      field('type', $._type),
    )),

    struct_literal: $ => prec(PREC.POSTFIX, seq(
      $._struct_type_path,
      '{',
      repeat(seq($.struct_field_init, optional(','))),
      '}',
    )),

    // Type path for struct literals: `Name` or `Name.Variant`
    _struct_type_path: $ => choice(
      field('type', $.type_identifier),
      seq(field('type', $.type_identifier), '.', field('variant', $.type_identifier)),
    ),

    struct_field_init: $ => choice(
      seq(field('name', $.identifier), ':', field('value', $._expression)),
      field('name', $.identifier), // shorthand
    ),

    assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left', $._expression),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '%=')),
      field('right', $._expression),
    )),

    _type: $ => choice(
      $.type_identifier,
      $.self_type,
      $.primitive_type,
      $.generic_type,
      $.union_type,
      $.function_type,
      $.unit_type,
      $.pointer_type,
      $.shared_type,
      $.read_type,
      $.infer_type,
    ),

    infer_type: $ => '_',

    self_type: $ => 'Self',

    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    primitive_type: $ => choice(
      'i8', 'i16', 'i32', 'i64', 'i128', 'isize',
      'u8', 'u16', 'u32', 'u64', 'u128', 'usize',
      'f32', 'f64',
    ),

    generic_type: $ => prec(1, seq(
      field('name', $.type_identifier),
      '[',
      commaSep1($._type),
      ']',
    )),

    union_type: $ => prec.left(PREC.OR, seq(
      $._type,
      'or',
      $._type,
    )),

    unit_type: $ => seq('(', ')'),

    pointer_type: $ => seq(
      '*',
      choice('const', 'mut'),
      $._type,
    ),

    _pattern: $ => choice(
      $.wildcard_pattern,
      $.identifier,
      $._literal,
      $.enum_pattern,
      $.struct_pattern,
      $.tuple_pattern,
      $.or_pattern,
      $.typed_binding,
    ),

    typed_binding: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    // =========================================================================
    // Literals
    // =========================================================================

    integer_literal: $ => token(choice(
      // Hex
      /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
      // Binary
      /0[bB][01][01_]*/,
      // Decimal
      /[0-9][0-9_]*/,
    )),

    float_literal: $ => token(
      /[0-9][0-9_]*\.[0-9][0-9_]*([eE][+-]?[0-9][0-9_]*)?/,
    ),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
      )),
      '"',
    ),

    string_content: $ => /[^"\\\n]+/,

    escape_sequence: $ => token(seq(
      '\\',
      choice(
        'n', 't', 'r', '\\', '"', "'", '0',
        /u\{[0-9a-fA-F]{1,6}\}/,
      ),
    )),

    boolean_literal: $ => choice('true', 'false'),

    none_literal: $ => 'none',

    // =========================================================================
    // Identifiers and comments
    // =========================================================================

    identifier: $ => /[a-z_][a-zA-Z0-9_]*/,
