test/corpus/types.txt
==================
Simple type
==================

func id(x: String) -> String {
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (block)))

==================
Generic type
==================

func first(items: Vec[Int]) -> Int {
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (generic_type
          name: (type_identifier)
          (type_identifier))))
    return_type: (type_identifier)
    body: (block)))

==================
Multi-param generic
==================

func get(map: HashMap[String, Int]) -> Int {
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (generic_type
          name: (type_identifier)
          (type_identifier)
          (type_identifier))))
    return_type: (type_identifier)
    body: (block)))

==================
Union type
==================

func find(id: String) -> User | None {
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (type_identifier)))
    return_type: (union_type
      (type_identifier)
      (type_identifier))
    body: (block)))

==================
Multi-union type
==================

func parse() -> Value | ParseError | IOError {
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (union_type
      (union_type
        (type_identifier)
        (type_identifier))
      (type_identifier))
    body: (block)))

==================
Pointer types
==================

extern "C" {
    func open(path: *const u8, db: *mut RawDb) -> i32
}

---

(source_file
  (extern_block
    abi: (string_literal
      (string_content))
    (extern_function
      name: (identifier)
      parameters: (parameter_list
        (parameter
          name: (identifier)
          type: (pointer_type
            (primitive_type)))
        (parameter
          name: (identifier)
          type: (pointer_type
            (type_identifier))))
      return_type: (primitive_type))))

==================
Unit type
==================

func noop() -> () {
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    return_type: (unit_type)
    body: (block)))

==================
Infer type
==================

func main() {
    let items: Vec[_] = get_items()
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (typed_binding
          name: (identifier)
          type: (generic_type
            name: (type_identifier)
            (infer_type)))
        value: (call_expression
          function: (identifier)
          arguments: (argument_list))))))

==================
Self type
==================

interface Eq {
    func equals(self, other: Self) -> Bool
}

---

(source_file
  (interface_declaration
    name: (type_identifier)
    (interface_method
      name: (identifier)
      parameters: (parameter_list
        (parameter
          (self_parameter))
        (parameter
          name: (identifier)
          type: (self_type)))
      return_type: (type_identifier))))
